--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -191,7 +191,8 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 
 \section{Κινδυνοι που προκύπτουν μέσα από αιμοδοσία (ασθένειες, ποσοστά)}
 	\subsection{Haemovigilance}
-	Με τον όρο αιμοεπαγρύπνηση ορίζουμε ως ένα σύνολο οργανωμένων διαδικασιών επιτήρησης, που σχετίζονται με τα ανεπιθύμητα και μη αναμενόμενα συμβάντα και αντιδράσεις στους δότες και τους λήπτες των προϊόντων του αίματος και με την επιδημιολογική παρακολούθηση των αιμοδοτών. \cite{VOX:VOX1442}Η αιμοεπαγρύπνηση εστιάζει στις  επιπλοκές των δωρητών αίματος και στις ανεπιθύμητες αντιδράσεις των ληπτών και συμπεριλαμβάνει όλες τις επιπλοκές της “γραμμής παραγωγής αίματος”, τα ανεπιθύμητα συμβάματα, την αναλυτική και αναδρομική καταγραφή των γεγονότων και την προοπτική έγκαιρης προειδοποίησης με χρήση ενός συστήματος ταχείας έγερσης συναγερμών. Η αιμοεπαγρύπνηση είναι ένα ισχυρό εργαλείο το οποίο στοχεύει στην βελτίωση της ποιότητας των διαδικασιών μετάγγισης αίματος, δίνοντας προταιρεότητα στην ασφάλεια. Απώτερος στόχος της αιμοεπαγρύπνησης είναι η πρόληψη ανεπιθύμητων συμβαμάτων και αντιδράσεων. Εισαγάγει μεθόδους εντοπισμού σφαλμάτων, συμβαμάτων και αντιδράσεων και συμπεριλαμβάνει συστημάτα συναγερμού, συστήματα ιχνηλασιμότητας, συστημάτα ειδοποιήσεων και τους ελέγχους των πρακτικών.
+	
+	Με τον όρο αιμοεπαγρύπνηση ορίζουμε ως ένα σύνολο οργανωμένων διαδικασιών επιτήρησης, που σχετίζονται με τα ανεπιθύμητα και μη αναμενόμενα συμβάντα και αντιδράσεις στους δότες και τους λήπτες των προϊόντων του αίματος και με την επιδημιολογική παρακολούθηση των αιμοδοτών. \cite{VOX:VOX1442}Η αιμοεπαγρύπνηση εστιάζει στις  επιπλοκές των δωρητών αίματος και στις ανεπιθύμητες αντιδράσεις των ληπτών και συμπεριλαμβάνει όλες τις επιπλοκές της “γραμμής παραγωγής αίματος”, την αναλυτική και αναδρομική καταγραφή των συμβαμάτων και την προοπτική έγκαιρης προειδοποίησης με χρήση ενός συστήματος ταχείας έγερσης συναγερμών. Η αιμοεπαγρύπνηση είναι ένα ισχυρό εργαλείο το οποίο στοχεύει στην βελτίωση της ποιότητας των διαδικασιών μετάγγισης αίματος, δίνοντας προτεραιότητα στην ασφάλεια. Απώτερος στόχος της αιμοεπαγρύπνησης είναι η πρόληψη ανεπιθύμητων συμβαμάτων και αντιδράσεων. Εισαγάγει μεθόδους εντοπισμού σφαλμάτων και αντιδράσεων και συμπεριλαμβάνει συστήματα συναγερμού, συστήματα ιχνηλασιμότητας, συστήματα ειδοποιήσεων και τους ελέγχους των πρακτικών.
 	Οι ουσιαστικοί στόχοι της διαδικασίας της αιμοεπαγρύπνησης είναι οι εξής:
 		\begin{itemize}
 		\item Να προληφθεί η επανεμφάνιση ανεπιθύμητων συμβαμάτων και αντιδράσεων 
@@ -201,20 +202,17 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 		\item Στην εκπαίδευση των γιατρών που χρησιμοποιούν το αίμα, καθώς και των ασθενών που μεταγγίζονται 
 		\end{itemize}
 
-		
-	Απαραίτητη προυπόθεση για την αποτελεσματική λειτουργία της αιμοεπαγρύπνησης είναι η 	ύπαρξη συστήματος ιχνηλασιμότητας. Ιχνηλασιμότητα ή ανιχνευσιμότητα (traceability) ορίζεται η ικανότητα πλήρους εντοπισμού καθεμίας μονάδας αίματος ή παραγώγων της από τον δότη μέχρι τον τελικό αποδέκτη. Επιτυγχάνεται  με ακριβείς και πλήρεις διαδικασίες αναγνώρισης κάθε δότη, κάθε συλλεγόμενης μονάδας αίματος, καθώς και όλων των παραγώγων του, τήρησης αρχείων και επισήμανσης καθώς και πλήρης διαδικασίας επαλήθευσης της παροχής και μετάγγισης αίματος.Με καταγραφή και μελέτη των απαραιτήτων  δεδομένων για την ιχνηλασιμότητα παράγουμε στατιστικά στοιχεία τα οποία αφορούν : στο  σύνολο των ασθενών που έχουν μεταγγισθεί , στις μονάδες ή στα παραγώγα αίματος που έχουν χρησιμοποιηθεί, στους εθελοντές αιμοδότες που έχουν δώσει τις μονάδες αίμοτος και στα προϊόντα αίματος που μεταγγίσθηκαν. 
+	Απαραίτητη προυπόθεση για την αποτελεσματική λειτουργία της αιμοεπαγρύπνησης είναι η ύπαρξη συστήματος ιχνηλασιμότητας. Ιχνηλασιμότητα ή ανιχνευσιμότητα (traceability) ορίζεται η ικανότητα πλήρους εντοπισμού καθεμίας μονάδας αίματος ή παραγώγων της από τον δότη μέχρι τον τελικό αποδέκτη. Επιτυγχάνεται  με ακριβείς και πλήρεις διαδικασίες αναγνώρισης κάθε δότη, κάθε συλλεγόμενης μονάδας αίματος, καθώς και όλων των παραγώγων του, τήρησης αρχείων και επισήμανσης καθώς και πλήρης διαδικασίας επαλήθευσης της παροχής και μετάγγισης αίματος.Με καταγραφή και μελέτη των απαραιτήτων  δεδομένων για την ιχνηλασιμότητα παράγουμε στατιστικά στοιχεία τα οποία αφορούν : στο  σύνολο των ασθενών που έχουν μεταγγισθεί , στις μονάδες ή στα παραγώγα αίματος που έχουν χρησιμοποιηθεί, στους εθελοντές αιμοδότες που έχουν δώσει τις μονάδες αίματος και στα προϊόντα αίματος που μεταγγίσθηκαν. 
 		Τα ανεπιθύμητα συμβάματα τα οποία μπορούν να προκύψουν χωρίζονται στις εξής βασικές κατηγορίες:
 		\begin{itemize}
 		\item	 Σοβαρή ανεπιθύμητη αντίδραση (Serious Adverse Reaction, SAR)
-		 “μια άνευ προθέσεως αντίδραση του δότη ή του ασθενούς που σχετίζεται με τη συλλογή ή τη μετάγγιση αίματος ή παραγώγων του 			και η οποία είναι θανατηφόρα, απειλητική για τη ζωή, προκαλεί αναπηρία ή ανικανότητα ή έχει ως αποτέλεσμα ή παρατείνει τη νοσηλεία ή τη νοσηρότητα”, (Οδηγία 2002/98/ΕΚ)
+		 "μια άνευ προθέσεως αντίδραση του δότη ή του ασθενούς που σχετίζεται με τη συλλογή ή τη μετάγγιση αίματος ή παραγώγων του και η οποία είναι θανατηφόρα, απειλητική για τη ζωή, προκαλεί αναπηρία ή ανικανότητα ή έχει ως αποτέλεσμα ή παρατείνει τη νοσηλεία ή τη νοσηρότητα", (Οδηγία 2002/98/ΕΚ)
  		\item Σοβαρό ανεπιθύμητο συμβάν (Serious Adverse Event , SAE)
- 		“κάθε ατυχές περιστατικό που σχετίζεται με τη συλλογή, τον έλεγχο, την επεξεργασία, την αποθήκευση και τη διανομή αίματος ή 				παραγώγου του, που θα μπορούσε να προκαλέσει το θάνατο, να απειλήσει τη ζωή, ή να προκαλέσει αναπηρία ή ανικανότητα ή να έχει ως αποτέλεσμα ή να παρατείνει τη νοσηλεία ή τη νοσηρότητα” , (Οδηγία 2002/98/ΕΚ)
+ 		"κάθε ατυχές περιστατικό που σχετίζεται με τη συλλογή, τον έλεγχο, την επεξεργασία, την αποθήκευση και τη διανομή αίματος ή παραγώγου του, που θα μπορούσε να προκαλέσει το θάνατο, να απειλήσει τη ζωή, ή να προκαλέσει αναπηρία ή ανικανότητα ή να έχει ως αποτέλεσμα ή να παρατείνει τη νοσηλεία ή τη νοσηρότητα" , (Οδηγία 2002/98/ΕΚ)
  		\item Παρ’ ολίγον συμβάματα (“near miss” events)
- 		 “σφάλματα που αν δεν ανιχνευθούν θα μπορούσαν να οδηγήσουν σε λανθασμένο προσδιορισμό ομάδας αίματος, αποτυχία
- 		 ανίχνευσης ενός ερυθροκυτταρικού αντισώματος, ή σε διανομή, συλλογή ή χορήγηση εσφαλμένου ή ακατάλληλου προϊόντος
- 		 αίματος ”, (Οδηγός, Συμβούλιο της Ευρώπης, Έκδοση 14) 
+ 		 "σφάλματα που αν δεν ανιχνευθούν θα μπορούσαν να οδηγήσουν σε λανθασμένο προσδιορισμό ομάδας αίματος, αποτυχία ανίχνευσης ενός ερυθροκυτταρικού αντισώματος, ή σε διανομή, συλλογή ή χορήγηση εσφαλμένου ή ακατάλληλου προϊόντος αίματος ", (Οδηγός, Συμβούλιο της Ευρώπης, Έκδοση 14) 
  		 \item Σφάλματα των μεταγγίσεων χωρίς συμβάματα (uneventful tranfusion errors)
- 		 “η μετάγγιση οποιουδήποτε εσφαλμένου, ακατάλληλου ή μη ενδεικνυόμενου προϊόντος αίματος που δεν προκαλεί βλάβη στον 					λήπτη”(Οδηγός, Συμβούλιο της Ευρώπης, Έκδοση 14η)
+ 		 "η μετάγγιση οποιουδήποτε εσφαλμένου, ακατάλληλου ή μη ενδεικνυόμενου προϊόντος αίματος που δεν προκαλεί βλάβη στον λήπτη" (Οδηγός, Συμβούλιο της Ευρώπης, Έκδοση 14η)
  		 \end{itemize} 
  		 
  	Κάθε σοβαρό ανεπιθύμητο συμβάν θα πρέπει να περιγράφεται αναλόγως. Για τον σκοπό αυτόν, έχει καθιερωθεί μία διεθνώς αποδεκτή κλίμακα ταξινόμησης. Η εύρεση της αιτιακής συσχέτισης μεταξύ ανεπιθύμητης αντίδρασης και μετάγγισης, έχει πολύ μεγάλη σημασία, καθώς έτσι μπορούμε να αναγνωρίσουμε αν ευθύνεται κάποιο συστατικό του αίματος ή όχι. Υπάρχουν πολλοί διαφορετικοί τύποι αντιδράσεων μετάγγισης. Η πιο κοινή υποδιαίρεση που χρησιμοποιείται είναι η ταξινόμηση με βάση την εμφάνιση των αντιδράσεων σε οξείες (λιγότερο από 24 ώρες μετά) και καθυστερημένες (περισσότερο από 24 ώρες μετά την μετάγγιση) αντιδράσεις. Πέραν από τους παραλήπτες αίματος, ανεπιθύμητες καταστάσεις μπορούν να προκύψουν και στους εθελοντές αιμοδότες. Τα αίτια και οι παράγοντες, που προκαλούν επιπλοκές στους αιμοδότες, διαφέρουν από τα αντίστοιχα των αιμοληπτών, και χωρίζονται σε τοπικές αντιδράσεις (κυρίως λόγω της εισαγωγής βελόνας), σε γενικότερες αντιδράσεις και σε διάφορους άλλους τύπους επιπλοκών. Οι επιπλοκές ταξινομούνται σε μία διαφορετική διεθνή κλίμακα, έτσι ώστε να να μπορούν να γίνουν συγκρίσεις και τίθενται τα σημεία στα οποία πρέπει να γίνουν παρεμβάσεις. 
@@ -225,6 +223,26 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 		
 	\subsection{Haemovigilance στο εξωτερικό}
 	
+	Το πιο ευρέ
 	
+		
 	
 	\subsection{Υπόσυστηματα Haemovigilance Ελλάδα}
+	
+	Στην Ελλάδα το αρμόδιο όργανο για την αιμοεπαγρύπνηση είναι το Συντονιστικό Κέντρο Αιμοεπαγρύπνησης (ΣΚΑΕ), το οποίο έχει ιδρυθεί από το Ελληνικό  Κέντρο Ελέγχου και Πρόληψης Νοσημάτων (ΚΕ.ΕΛ.Π.ΝΟ),το 1995. Το ΣΚΑΕ απαρτίζεται από εξειδικευμένο προσωπικό στα θέματα ιατρικής, δημόσιας υγείας, εργαστηριακών ελέγχων, στατιστικών αναλύσεων, εκπαίδευσης και οργάνωσης. Η ευρωπαϊκή προσπάθεια για την προώθηση αυστηρών προτύπων για την ποιότητα στην αιμοδοσία και στις μεταγγίσεις αίματος, και ιδίως τον περιορισμό των κινδύνων που προκύπτουν σε αυτόν τον τομέα της δημόσιας υγείας, οδήγησαν στην ίδρυση του ΣΚΑΕ, το οποίο αποτελεί ιδρυτικό μέλος του Διεθνούς Δικτύου Αιμοεπαγρύπνησης. 
+	Η συλλογή των προς ανάλυση δεδομένων γίνεται με την δημιουργία δικτύων σε τρία επίπεδα: τοπικό δίκτυο (επίπεδο νοσοκομείων, κέντρων αιμοδοσίας), περιφερειακό δίκτυο (το οποίο έχει έξι βάσεις:  στη Νότια Ελλάδα, την Ανατολική Ελλάδα, Βόρεια Ελλάδα, Δυτική Ελλάδα, Θεσσαλία και την Κρήτη ) και στο εθνικό δίκτυο (ΣΚΑΕ). Το τελευταίο, κοινοποιεί τα αποτελέσματα στο ΚΕ.ΕΛ.Π.ΝΟ και στο Εθνικό Κέντρο Αιμοδοσίας( Ε.Κ.Ε.Α). Στο σχήμα \ref{fig:SKAE_diagram} βλέπουμε το διάγραμμα οργάνωσης του συνολικού δικτύου.
+	
+\begin{figure}[h!]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{SKAE_diagram.jpg}
+	    \caption{Διάγραμμα λειτουργίας ΣΚΑΕ. Πηγή:Έκδοση ΣΚΑΕ, ΚΕΕΛΠΝΟ, ΥΥΚΑ, Αθήνα Δεκέμβριος 2009}
+	    \label{fig:SKAE_diagram}
+\end{figure}	
+
+Οι βασικές λειτουργίες του ΣΚΑΕ είναι οι εξής \cite{cite-revekka1}
+\begin{itemize}
+		\item Η συνεχής επιδημιολογική επιτήρηση των λοιμώξεων που μεταδίδονται με το αίμα. Αυτό επιτυγχάνεται με χρήση συστημάτων ανιχνευσιμότητας σε όλα τα στάδια της αιματικής αλυσίδας. Σε περίπτωση εντοπισμού πιθανών μολυσματικών μονάδων, ακολουθεί η άμεση απόσυρση τους. Πραγματοποιούνται διαρκώς αναδρομικοί έλεγχοι, με σκοπό να μειωθούν στο ελάχιστο τα πιθανά λάθη. 
+		\item	Η επιδημιολογική επιτήρηση ανεπιθύμητων αντιδράσεων και συμβάντων σχετικών με την μετάγγιση αίματος. Οι παρατηρήσεις αυτές ακολουθούνται από αναφορές στις αρμόδιες αρχές και διαμόρφωση προτάσεων με αποτελεσματικά διορθωτικά μέτρα, τις οποίες ακολουθούν τα νοσοκομεία και τα κέντρα αιμοδοσίας.  
+		\item Η επαγρύπνηση για ανεπιθύμητες αντιδράσεις, ατυχήματα, βλάβες και επιπλοκές στην διάρκεια και μετά από την αιμοδοσία. Άμεση προϋπόθεση του συστήματος επαγρύπνησης είναι η ύπαρξη συστημάτων άμεσης ετοιμότητας εγέρσεων συναγερμών και η αποτελεσματική και αξιόπιστη δυνατότητα διαχείρισης κρίσεων.  Το ΣΚΑΕ ενημερώνει τακτικά την ιατρική κοινότητα για τις εξελίξεις με δημοσιεύσεις και εκδόσεις. 
+		\end{itemize}
+		
