--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -218,6 +218,19 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 		τι παιζει με την αρχη προστασιας δεδομενων ; (το αναφεραν στο εθνικο μητρωο αιμοδοτων - μαθε λεπτομερειες!)
 
 \section{Κινδυνοι που προκύπτουν μέσα από αιμοδοσία (ασθένειες, ποσοστά)}
+
+
+	Ο Παγκόσμιος Οργανισμός Υγείας (WHO) συνιστά την ακόλουθη ολοκληρωμένη στρατηγική με στόχο την προώθηση της ασφάλειας και της άμεσης πρόσβασης σε αίμα με ταυτόχρονη μείωση των κινδύνων που εγκυμονούν στις αιμοδοσίες:
+	\begin{enumerate}
+	\item Δημιουργία μίας εθνικής, άρτιας οργανωμένης υπηρεσίας αιμοδοσίας, η οποία θα μπορεί να εξασφαλίσει με αξιοπιστία και ασφάλεια τα απαραίτητα αποθέματα αίματος για τις ανάγκες του πληθυσμού.
+	\item Συλλογή αίματος μόνο από μη-αμειβόμενους εθελοντές αιμοδότες, οι οποίοι τηρούν όλες τις απαραίτητες προϋποθέσεις φέρουν χαμηλό κίνδυνο απόκτησης επίφοβων λοιμώξεων.
+	\item Πλήρεις και ποιοτικές εξετάσεις όλων των αιμοδοσιών για μεταδοτικές μολύνσεις (όπως HIV, ηπατίτιδα Β, ηπατίτιδα C, σύφιλη και άλλες λοιμώξεις)  καθώς και εξετάσεις για τις ομάδες αίματος και τη συμβατότητα.
+	\item Μείωση των άσκοπων μεταγγίσεις με την κατάλληλη κλινική χρήση του αίματος και με διασφάλιση της ασφαλής χορήγησης του αίματος και των παραγώγων του.
+	\item Σχεδιασμός και εφαρμογή αποτελεσματικών συστημάτων ποιότητας σε όλους τους τομείς, συμπεριλαμβανομένης της διαχείρισης της ποιότητας, της ανάπτυξης και εφαρμογής των προτύπων ποιότητας καθώς και την τακτική αξιολόγηση της ποιότητας. [missing bib]
+\end{enumerate}
+
+	Οι υπηρεσίες Αιμοδοσίας έχουν καθήκον αφενός μεν την φροντίδα για την ασφάλεια του αιμοδότη, αφετέρου δε την εγγύηση του αίματος και των προϊόντων του αίματος που προορίζονται για μετάγγιση. Για τον σκοπό αυτό έχει δημιουργηθεί και αναπτυχθεί η διαδικασία της αιμοεπαγρυπνησης (heamovigilance).
+
 	\subsection{Haemovigilance}
 	
 	Με τον όρο αιμοεπαγρύπνηση ορίζουμε ως ένα σύνολο οργανωμένων διαδικασιών επιτήρησης, που σχετίζονται με τα ανεπιθύμητα και μη αναμενόμενα συμβάντα και αντιδράσεις στους δότες και τους λήπτες των προϊόντων του αίματος και με την επιδημιολογική παρακολούθηση των αιμοδοτών. \cite{VOX:VOX1442}Η αιμοεπαγρύπνηση εστιάζει στις  επιπλοκές των δωρητών αίματος και στις ανεπιθύμητες αντιδράσεις των ληπτών και συμπεριλαμβάνει όλες τις επιπλοκές της “γραμμής παραγωγής αίματος”, την αναλυτική και αναδρομική καταγραφή των συμβαμάτων και την προοπτική έγκαιρης προειδοποίησης με χρήση ενός συστήματος ταχείας έγερσης συναγερμών. Η αιμοεπαγρύπνηση είναι ένα ισχυρό εργαλείο το οποίο στοχεύει στην βελτίωση της ποιότητας των διαδικασιών μετάγγισης αίματος, δίνοντας προτεραιότητα στην ασφάλεια. Απώτερος στόχος της αιμοεπαγρύπνησης είναι η πρόληψη ανεπιθύμητων συμβαμάτων και αντιδράσεων. Εισαγάγει μεθόδους εντοπισμού σφαλμάτων και αντιδράσεων και συμπεριλαμβάνει συστήματα συναγερμού, συστήματα ιχνηλασιμότητας, συστήματα ειδοποιήσεων και τους ελέγχους των πρακτικών.
@@ -273,4 +286,49 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 		\item	Η επιδημιολογική επιτήρηση ανεπιθύμητων αντιδράσεων και συμβάντων σχετικών με την μετάγγιση αίματος. Οι παρατηρήσεις αυτές ακολουθούνται από αναφορές στις αρμόδιες αρχές και διαμόρφωση προτάσεων με αποτελεσματικά διορθωτικά μέτρα, τις οποίες ακολουθούν τα νοσοκομεία και τα κέντρα αιμοδοσίας.  
 		\item Η επαγρύπνηση για ανεπιθύμητες αντιδράσεις, ατυχήματα, βλάβες και επιπλοκές στην διάρκεια και μετά από την αιμοδοσία. Άμεση προϋπόθεση του συστήματος επαγρύπνησης είναι η ύπαρξη συστημάτων άμεσης ετοιμότητας εγέρσεων συναγερμών και η αποτελεσματική και αξιόπιστη δυνατότητα διαχείρισης κρίσεων.  Το ΣΚΑΕ ενημερώνει τακτικά την ιατρική κοινότητα για τις εξελίξεις με δημοσιεύσεις και εκδόσεις. 
 		\end{itemize}
-		
+Το ΣΚΑΕ έχει αναπτύξει πλήρεις και αποτελεσματικές μεθόδους εργασίας, με βάση τις κατευθυντήριες οδηγίες της Ευρωπαϊκής Ένωσης και του Διεθνούς Οργανισμού υγείας(WHO). 
+
+	Όσον αφορά στις λοιμώξεις που μεταδίδονται με το αίμα εφαρμόζεται αναλυτική καταγραφή των οροθετικών αιμοδοτών για HIV, HBV, HCV, σύφιλη, HTLV καθώς και ανάλυση 
+των επιδημιολογικών δεδομένων σε σχέση με τις μονάδες αίματος, την Υπηρεσία Αιμοδοσίας, τα δημογραφικά χαρακτηριστικά των αιμοδοτών (φύλο, ηλικία, τόπος διαμονής, οικονομικό και μορφωτικό επίπεδο), την κατηγορία αιμοδοτών (εθελοντές, συγγενείς, στρατιώτες) και την αιμοδοτική συχνότητα (αιμοδότες πρώτης φοράς, σποραδικοί και τακτικοί). Επιπλέον καταγράφονται αναλυτικά τα δεδομένα για ποιοτικούς ελέγχους, πιστοποιήσεις ποιότητας, δείκτες συλλογής και ελέγχου του αίματος ανά Υπηρεσία Αιμοδοσίας και διαχείρισης ανθρώπινου δυναμικού. Με βάση τους εγγεγραμμένους αιμοδότες πραγματοποιείται συνεχής παρακολούθηση και χαρτογράφηση των ρετροϊκών λοιμώξεων και των ηπατιτίδων στον αιμοδοτικό πληθυσμό. Οι μεθόδοι ορολογικού και μοριακού ελέγχου του αίματος για λοιμώξεις διευρύνονται διαρκώς. Πραγματοποιείται πλήρης  καταγραφή δεδομένων για ποιοτικό έλεγχο, πιστοποίηση ποιότητας, δείκτες συλλογής και ελέγχου του αίματος ανά Υπηρεσία Αιμοδοσίας και διαχείρισης ανθρώπινου δυναμικού. Το ΣΚΑΕ έχει καθιερώσει πρωτόκολλα ανιχνευσιμότητας για λοιμώξεις που αναφέρονται ύστερα από μετάγγιση αίματος καθώς και πρωτόκολλα αναδρομικού ελέγχου ληπτών δυνητικά μολυσμένου αίματος τα οποία είναι καθολικά και χρησιμοποιούνται σε όλες τις υπηρεσίες υγείας. Τέλος διεξάγονται διαρκώς μελέτες κόστους – ωφέλειας για τα μέτρα πρόληψης της διασποράς λοιμωδών νόσων με το αίμα και τα προϊόντα του αίματος καθώς και έρευνα πάνω στις νέες λοιμώξεις (Ηπατίτιδα Ε κλπ). 
+
+	Στον τομέα των ανεπιθύμητων αντιδράσεων και τα ανεπιθύμητων συμβάντων κατά και μετά την αιμοδοσία καταγράφονται αναλυτικά όλες οι ανεπιθύμητες αντιδράσεις και τα συμβάντα που προκύπτουν κατά την αιμοδοσία εθελοντών και με βάση τα καταγεγραμμένα γεγονότα αναλύονται οι πληροφορίες που προκύπτουν πάνω στον τύπο και στην σοβαρότητα των αντίδρασεων/ συμβάντων. Με βάση τις αναλύσεις αυτές προκύπτουν κάποια συμπεράσματα και προτάσεις για βελτίωση της ποιότητας των αιμοδοσιών και δίνονται κατευθυντήριες αρχές στα νοσοκομεία και στα αιμοδοτικά κέντρα.
+	
+	Οι μέθοδοι εργασίας αναφορικά με τις ανεπιθύμητες αντιδράσεις και τα ανεπιθύμητα συμβάντα σχετικά με τη μετάγγιση αίματος και προϊόντων αίματος περιλαμβάνουν σε πρώτο στάδιο την καταγραφή ανεπιθυμήτων αντιδράσεων, που σχετίζονται με λοιμογόνους παράγοντες (ιογενείς, βακτηριακοί, παρασιτικοί παράγοντες) καθώς και αυτών που σχετίζονται με μη λοιμογόνουες παράγοντες, ανεξάρτητα από την σοβαρότητα των αντιδράσεων. Επιπλέον καταγράφονται τα ανεπιθύμητα σοβαρά και «παρ’ ολίγον» συμβάματα και τα σφάλματα των μεταγγίσεων χωρίς σύμβαμα», που μπορεί να επηρεάσουν την ασφάλεια και την ποιότητα του μεταγγιζόμενου προϊόντος αίματος, σε όλες τις διαδικασίες της συλλογής, του ελέγχου, της επεξεργασίας, της αποθήκευσης και της διανομής προϊόντων αίματος. Το ΣΚΑΕ διαμορφώνει τα δελτία αναφοράς των ανεπιθύμητων αντιδράσεων και ανεπιθύμητων συμβάντων και τις οδηγίες διερεύνησης και αντιμετώπισης τους , σύμφωνα με τις Ευρωπαϊκές Οδηγίες και τις συστάσεις του Διεθνούς Δικτύου Αιμοεπαγρύπνησης. Οι πληροφορίες σχετικά με τις ανεπιθύμητες αντιδράσεις και τα ανεπιθύμητα συμβάντα αναλύονται διεξοδικά ανάλογα με τον τύπο της αντίδρασης, τη συσχέτισης με τη μετάγγιση, τη σοβαρότητα και την έκβαση της αντίδρασης και το προϊόν αίματος (ερυθρά, πλάσμα, αιμοπετάλια). Τέλος το ΣΚΑΕ συλλέγει, αναλύει και καταγράφει την ποιότητας των ελληνικών αναφορών για τις μεταδιδόμενες με τη μετάγγιση λοιμώξεις συγκριτικά με τις απαιτήσεις αιμοεπαγρύπνησης και τις συστάσεις των διεθνών οργανισμών.
+	
+	Στην συνέχεια παρουσιάζονται στοιχεία τα οποία έχουν προκύψει από μακροχρόνιες μελέτες του ΣΚΑΕ και αφορούν τις αλληνικές αιμοδοσίες.
+	Έπειτα από εκτεταμένες μελέτες και επιτηρήσεις έχουν προκύψει τα εξής στοιχεία τα οποία αφορούν στην χώρα μας με βάση τις βασικές επιτηρήσεις του ΣΚΑΕ. Στο σχήμα \ref{fig:statistics1}  παρουσιάζονται τα αποτελέσματα της οροεπικράτησης των λοιμώξεων που αφορούν ελεγχθείσες μονάδες ολικού αίματος και αιμοπεταλιαφαίρεσης το διάστημα των ετών 1996-2013. Στο σχήμα 2 \ref{fig:statistics2} παρουσιάζεται η μέση ετήσια μεταβολή ορολογικών δεικτών κατά στο διάστημα των ετών 2003-2013.
+	\begin{figure}[h!]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{statistics1.jpg}
+	    \caption{Οροεπικράτηση λοιμώξεων σε 9.459.863 ελεγχθείσες μονάδες αίματος και αιμοπεταλιαφαίρεσης. Πηγή: ΚΕ.ΕΛ.Π.ΝΟ Ενημερωτικό δελτίο}
+	    \label{fig:statistics1}
+\end{figure}	
+\begin{figure}[h!]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{statistics2.jpg}
+	    \caption{Μέση μεταβολή των ορολογικών δεικτών των λοιμώξεων που μεταδίδονται με το αίμα. Πηγή: ΚΕ.ΕΛ.Π.ΝΟ Ενημερωτικό δελτίο}
+	    \label{fig:statistics2}
+\end{figure}	
+	Η κατανομή και η ανάλυση των ανεπιθύμητων αντιδράσεων σχετικά με τη μετάγγιση ασθενών το έτος 2013 φαίνονται στο \ref{fig:statistics3}. Το έτος 2013 δηλώθηκαν, μελετήθηκαν και παρουσιάσθηκαν 1092 ανεπιθύμητες αντιδράσεις κατά τη μετάγγιση 729456 προϊόντων αίματος. Η συχνότητα των σοβαρών αντιδράσεων κατά τη μετάγγιση είναι 1/9994 προϊόντα. Κατά τα έτη 1997-2013, δηλώθηκαν επτά θάνατοι σχετικά με τη μετάγγιση 8972722 προϊόντων αίματος, συχνότητα 1/281817 προϊόντα με κύρια αίτια: ΑΒΟ ασυμβατότητα, TRALI, βακτηριακή επιμόλυνση.
+\begin{figure}[h!]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{statistics3.jpg}
+	    \caption{Κατανομή αντιδράσεων 2013. Πηγή: ΚΕ.ΕΛ.Π.ΝΟ Ενημερωτικό δελτίο}
+	    \label{fig:statistics3}
+\end{figure}
+Στο σχήμα \ref{fig:statistics4} παρουσιάζονται διαγραμματικά οι ανεπιθύμητες αντιδράσεις σχετικές  με την αιμοδοσίας. Πιο συγκεκριμένα δηλώθηκαν 148 ανεπιθύμητες αντιδράσεις που αφορούσαν σε σύνολο μεταγγίσεων 44611 μονάδων ερυθρών αιμοσφαιρίων. Καταγράφηκαν (σε ποσοστά επί τοις εκατό) 0.22 πυρετικές, 0.13 αλλεργικές, 0.13 αλλοανοσοποίηση και 0.6 άλλης αιτιολογίας αντίδρασης. Τέλος, στο σχήμα \ref{fig:statistics5} παρουσιάζεται ποσοστιαία ο αριθμός των συμβάντων που  έλαβαν χώρα πριν και κατά την διάρκεια της αιμοδοσίας.
+\begin{figure}[h!]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{statistics4.jpg}
+	    \caption{Ανεπιθύμητες αντιδράσεις σχετικά με την αιμοδοσία 2013. Πηγή: ΚΕ.ΕΛ.Π.ΝΟ Ενημερωτικό δελτίο}
+	    \label{fig:statistics4}
+\end{figure}
+\begin{figure}[h!]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{statistics5.jpg}
+	    \caption{ Συμβάντα κατά και μετά την αιμοδοσία, 2013. Πηγή: ΚΕ.ΕΛ.Π.ΝΟ Ενημερωτικό δελτίο}
+	    \label{fig:statistics5}
+\end{figure}
+
+
+[να μπει ρεφ :   http://www2.keelpno.gr/blog/?p=6610]
