--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -226,7 +226,7 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 	\item Συλλογή αίματος μόνο από μη-αμειβόμενους εθελοντές αιμοδότες, οι οποίοι τηρούν όλες τις απαραίτητες προϋποθέσεις φέρουν χαμηλό κίνδυνο απόκτησης επίφοβων λοιμώξεων.
 	\item Πλήρεις και ποιοτικές εξετάσεις όλων των αιμοδοσιών για μεταδοτικές μολύνσεις (όπως HIV, ηπατίτιδα Β, ηπατίτιδα C, σύφιλη και άλλες λοιμώξεις)  καθώς και εξετάσεις για τις ομάδες αίματος και τη συμβατότητα.
 	\item Μείωση των άσκοπων μεταγγίσεις με την κατάλληλη κλινική χρήση του αίματος και με διασφάλιση της ασφαλής χορήγησης του αίματος και των παραγώγων του.
-	\item Σχεδιασμός και εφαρμογή αποτελεσματικών συστημάτων ποιότητας σε όλους τους τομείς, συμπεριλαμβανομένης της διαχείρισης της ποιότητας, της ανάπτυξης και εφαρμογής των προτύπων ποιότητας καθώς και την τακτική αξιολόγηση της ποιότητας. [missing bib]
+	\item Σχεδιασμός και εφαρμογή αποτελεσματικών συστημάτων ποιότητας σε όλους τους τομείς, συμπεριλαμβανομένης της διαχείρισης της ποιότητας, της ανάπτυξης και εφαρμογής των προτύπων ποιότητας καθώς και την τακτική αξιολόγηση της ποιότητας. \cite{Bolton-Maggs2013}
 \end{enumerate}
 
 	Οι υπηρεσίες Αιμοδοσίας έχουν καθήκον αφενός μεν την φροντίδα για την ασφάλεια του αιμοδότη, αφετέρου δε την εγγύηση του αίματος και των προϊόντων του αίματος που προορίζονται για μετάγγιση. Για τον σκοπό αυτό έχει δημιουργηθεί και αναπτυχθεί η διαδικασία της αιμοεπαγρυπνησης (heamovigilance).
@@ -276,11 +276,11 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 \begin{figure}[h!]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{SKAE_diagram.jpg}
-	    \caption{Διάγραμμα λειτουργίας ΣΚΑΕ. Πηγή:Έκδοση ΣΚΑΕ, ΚΕΕΛΠΝΟ, ΥΥΚΑ, Αθήνα Δεκέμβριος 2009}
+	    \caption{Διάγραμμα λειτουργίας}
 	    \label{fig:SKAE_diagram}
 \end{figure}	
 
-Οι βασικές λειτουργίες του ΣΚΑΕ είναι οι εξής \cite{cite-revekka1}
+Οι βασικές λειτουργίες του ΣΚΑΕ είναι οι εξής:
 \begin{itemize}
 		\item Η συνεχής επιδημιολογική επιτήρηση των λοιμώξεων που μεταδίδονται με το αίμα. Αυτό επιτυγχάνεται με χρήση συστημάτων ανιχνευσιμότητας σε όλα τα στάδια της αιματικής αλυσίδας. Σε περίπτωση εντοπισμού πιθανών μολυσματικών μονάδων, ακολουθεί η άμεση απόσυρση τους. Πραγματοποιούνται διαρκώς αναδρομικοί έλεγχοι, με σκοπό να μειωθούν στο ελάχιστο τα πιθανά λάθη. 
 		\item	Η επιδημιολογική επιτήρηση ανεπιθύμητων αντιδράσεων και συμβάντων σχετικών με την μετάγγιση αίματος. Οι παρατηρήσεις αυτές ακολουθούνται από αναφορές στις αρμόδιες αρχές και διαμόρφωση προτάσεων με αποτελεσματικά διορθωτικά μέτρα, τις οποίες ακολουθούν τα νοσοκομεία και τα κέντρα αιμοδοσίας.  
@@ -295,40 +295,37 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 	
 	Οι μέθοδοι εργασίας αναφορικά με τις ανεπιθύμητες αντιδράσεις και τα ανεπιθύμητα συμβάντα σχετικά με τη μετάγγιση αίματος και προϊόντων αίματος περιλαμβάνουν σε πρώτο στάδιο την καταγραφή ανεπιθυμήτων αντιδράσεων, που σχετίζονται με λοιμογόνους παράγοντες (ιογενείς, βακτηριακοί, παρασιτικοί παράγοντες) καθώς και αυτών που σχετίζονται με μη λοιμογόνουες παράγοντες, ανεξάρτητα από την σοβαρότητα των αντιδράσεων. Επιπλέον καταγράφονται τα ανεπιθύμητα σοβαρά και «παρ’ ολίγον» συμβάματα και τα σφάλματα των μεταγγίσεων χωρίς σύμβαμα», που μπορεί να επηρεάσουν την ασφάλεια και την ποιότητα του μεταγγιζόμενου προϊόντος αίματος, σε όλες τις διαδικασίες της συλλογής, του ελέγχου, της επεξεργασίας, της αποθήκευσης και της διανομής προϊόντων αίματος. Το ΣΚΑΕ διαμορφώνει τα δελτία αναφοράς των ανεπιθύμητων αντιδράσεων και ανεπιθύμητων συμβάντων και τις οδηγίες διερεύνησης και αντιμετώπισης τους , σύμφωνα με τις Ευρωπαϊκές Οδηγίες και τις συστάσεις του Διεθνούς Δικτύου Αιμοεπαγρύπνησης. Οι πληροφορίες σχετικά με τις ανεπιθύμητες αντιδράσεις και τα ανεπιθύμητα συμβάντα αναλύονται διεξοδικά ανάλογα με τον τύπο της αντίδρασης, τη συσχέτισης με τη μετάγγιση, τη σοβαρότητα και την έκβαση της αντίδρασης και το προϊόν αίματος (ερυθρά, πλάσμα, αιμοπετάλια). Τέλος το ΣΚΑΕ συλλέγει, αναλύει και καταγράφει την ποιότητας των ελληνικών αναφορών για τις μεταδιδόμενες με τη μετάγγιση λοιμώξεις συγκριτικά με τις απαιτήσεις αιμοεπαγρύπνησης και τις συστάσεις των διεθνών οργανισμών.
 	
-	Στην συνέχεια παρουσιάζονται στοιχεία τα οποία έχουν προκύψει από μακροχρόνιες μελέτες του ΣΚΑΕ και αφορούν τις αλληνικές αιμοδοσίες.
+	Στην συνέχεια παρουσιάζονται στοιχεία τα οποία έχουν προκύψει από μακροχρόνιες μελέτες του ΣΚΑΕ και αφορούν τις ελληνικές αιμοδοσίες. \cite{ΚΕ.ΕΛ.Π.ΝΟ.2015}
 	Έπειτα από εκτεταμένες μελέτες και επιτηρήσεις έχουν προκύψει τα εξής στοιχεία τα οποία αφορούν στην χώρα μας με βάση τις βασικές επιτηρήσεις του ΣΚΑΕ. Στο σχήμα \ref{fig:statistics1}  παρουσιάζονται τα αποτελέσματα της οροεπικράτησης των λοιμώξεων που αφορούν ελεγχθείσες μονάδες ολικού αίματος και αιμοπεταλιαφαίρεσης το διάστημα των ετών 1996-2013. Στο σχήμα 2 \ref{fig:statistics2} παρουσιάζεται η μέση ετήσια μεταβολή ορολογικών δεικτών κατά στο διάστημα των ετών 2003-2013.
 	\begin{figure}[h!]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{statistics1.jpg}
-	    \caption{Οροεπικράτηση λοιμώξεων σε 9.459.863 ελεγχθείσες μονάδες αίματος και αιμοπεταλιαφαίρεσης. Πηγή: ΚΕ.ΕΛ.Π.ΝΟ Ενημερωτικό δελτίο}
+	    \caption{Οροεπικράτηση λοιμώξεων σε 9.459.863 ελεγχθείσες μονάδες αίματος και αιμοπεταλιαφαίρεσης.}
 	    \label{fig:statistics1}
 \end{figure}	
 \begin{figure}[h!]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{statistics2.jpg}
-	    \caption{Μέση μεταβολή των ορολογικών δεικτών των λοιμώξεων που μεταδίδονται με το αίμα. Πηγή: ΚΕ.ΕΛ.Π.ΝΟ Ενημερωτικό δελτίο}
+	    \caption{Μέση μεταβολή των ορολογικών δεικτών των λοιμώξεων που μεταδίδονται με το αίμα}
 	    \label{fig:statistics2}
 \end{figure}	
 	Η κατανομή και η ανάλυση των ανεπιθύμητων αντιδράσεων σχετικά με τη μετάγγιση ασθενών το έτος 2013 φαίνονται στο \ref{fig:statistics3}. Το έτος 2013 δηλώθηκαν, μελετήθηκαν και παρουσιάσθηκαν 1092 ανεπιθύμητες αντιδράσεις κατά τη μετάγγιση 729456 προϊόντων αίματος. Η συχνότητα των σοβαρών αντιδράσεων κατά τη μετάγγιση είναι 1/9994 προϊόντα. Κατά τα έτη 1997-2013, δηλώθηκαν επτά θάνατοι σχετικά με τη μετάγγιση 8972722 προϊόντων αίματος, συχνότητα 1/281817 προϊόντα με κύρια αίτια: ΑΒΟ ασυμβατότητα, TRALI, βακτηριακή επιμόλυνση.
 \begin{figure}[h!]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{statistics3.jpg}
-	    \caption{Κατανομή αντιδράσεων 2013. Πηγή: ΚΕ.ΕΛ.Π.ΝΟ Ενημερωτικό δελτίο}
+	    \caption{Κατανομή αντιδράσεων}
 	    \label{fig:statistics3}
 \end{figure}
 Στο σχήμα \ref{fig:statistics4} παρουσιάζονται διαγραμματικά οι ανεπιθύμητες αντιδράσεις σχετικές  με την αιμοδοσίας. Πιο συγκεκριμένα δηλώθηκαν 148 ανεπιθύμητες αντιδράσεις που αφορούσαν σε σύνολο μεταγγίσεων 44611 μονάδων ερυθρών αιμοσφαιρίων. Καταγράφηκαν (σε ποσοστά επί τοις εκατό) 0.22 πυρετικές, 0.13 αλλεργικές, 0.13 αλλοανοσοποίηση και 0.6 άλλης αιτιολογίας αντίδρασης. Τέλος, στο σχήμα \ref{fig:statistics5} παρουσιάζεται ποσοστιαία ο αριθμός των συμβάντων που  έλαβαν χώρα πριν και κατά την διάρκεια της αιμοδοσίας.
 \begin{figure}[h!]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{statistics4.jpg}
-	    \caption{Ανεπιθύμητες αντιδράσεις σχετικά με την αιμοδοσία 2013. Πηγή: ΚΕ.ΕΛ.Π.ΝΟ Ενημερωτικό δελτίο}
+	    \caption{Ανεπιθύμητες αντιδράσεις σχετικά με την αιμοδοσία 2013}
 	    \label{fig:statistics4}
 \end{figure}
 \begin{figure}[h!]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{statistics5.jpg}
-	    \caption{ Συμβάντα κατά και μετά την αιμοδοσία, 2013. Πηγή: ΚΕ.ΕΛ.Π.ΝΟ Ενημερωτικό δελτίο}
+	    \caption{ Συμβάντα κατά και μετά την αιμοδοσία, 2013}
 	    \label{fig:statistics5}
 \end{figure}
-
-
-[να μπει ρεφ :   http://www2.keelpno.gr/blog/?p=6610]
