System Analusis - 3.1 new

--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -3,9 +3,9 @@
 
 	Οι απαιτήσεις ενός συστήματος αποτελούν τη βάση των συστημάτων λογισμικού. Ουσιαστικά, είναι η περιγραφή των υπηρεσιών που πρέπει να παρέχει ένα σύστημα λογισμικού και οι περιορισμοί υπό τους οποίους πρέπει αυτές να λειτουργούν. Διακρίνονται σε δύο βασικές κατηγορίες τις λειτουργικές απαιτήσεις (functional requirements) και τις μη λειτουργικές απαιτήσεις(non functional requirements). 
 	
-	Οι λειτουργικές απαιτήσεις προσδιορίζουν τα βασικά χαρακτηριστικά του συστήματος και την λειτουργία του από την άποψη του ίδιου του προϊόντος και των χρηστών του . Στον όρο λειτουργία του συστήματος συμπεριλαμβάνεται οι συνολικές είσοδοι, η συμπεριφορά και οι έξοδοι του συστήματος. Στο σύστημα που υλοποιούμε, οι λειτουργικές απαιτήσεις χρησιμοποιούνται για να περιγράψουν ειδικές λειτουργίες που καθορίζουν αυτά τα οποία αναμένουμε να πετύχει το σύστημα. Αν και αναφέρονται ως "απαιτήσεις", στην πραγματικότητα αποτελούν μια μορφή σχεδιασμού, υψηλού επιπέδου. Οι λειτουργικές απαιτήσεις συχνά προσδιορίζονται ως λειτουργικές προδιαγραφές,» και ο όρος περιγραφή αποτελεί συνώνυμο του σχεδιασμού.
+	Οι λειτουργικές απαιτήσεις προσδιορίζουν τα βασικά χαρακτηριστικά του συστήματος και την λειτουργία του από την άποψη του ίδιου του προϊόντος και των χρηστών του . Στον όρο λειτουργία του συστήματος συμπεριλαμβάνεται οι συνολικές είσοδοι, η συμπεριφορά και οι έξοδοι του συστήματος. Στο σύστημα που υλοποιούμε, οι λειτουργικές απαιτήσεις χρησιμοποιούνται για να περιγράψουν ειδικές λειτουργίες που καθορίζουν αυτά τα οποία αναμένουμε να πετύχει το σύστημα. Αν και αναφέρονται ως "απαιτήσεις", στην πραγματικότητα αποτελούν μια μορφή σχεδιασμού, υψηλού επιπέδου. Οι λειτουργικές απαιτήσεις συχνά προσδιορίζονται ως λειτουργικές προδιαγραφές,» και ο όρος περιγραφή αποτελεί συνώνυμο του σχεδιασμού. Οι λειτουργικές απαιτήσεις είναι ουσιαστικά το "τι" λειτουργία θέλουμε να επιτελεί το σύστημα, χωρίς να παρέχουμε καμία πληροφορία για το "πως".
 	
-	Οι μη λειτουργικές απαιτήσεις είναι οι απαιτήσεις που καθορίζουν τα κριτήρια που χρησιμοποιούνται για να κρίνουν την λειτουργία του συστήματος και κατ΄ επέκταση  αν είναι επιτυχημένο ή όχι, για αυτό και συχνά αποκαλούνται και ιδιότητες του. Επεξεργάζονται τα χαρακτηριστικά απόδοσης του, και μπορούν επίσης να περιγράψουν τις πτυχές του συστήματος που δεν σχετίζονται με την εκτέλεση του, αλλά με την εξέλιξη του στο πέρασμα του χρόνου. Οι βασικές συνήθεις κατηγορίες των μη λειτουργικών απαιτήσεων σχετίζονται με την ασφάλεια( ασφαλή πρόσβαση σε δεδομένα αλλά και σε hardware), την απόδοση ( ορίζουν χαρακτηριστικά που έχουν να κάνουν με την ταχύτητα και την ανταπόκριση του συστήματος) και την επεκτασιμότητα (σχετίζονται με το μέγεθος του συστήματος). Γενικότερα, οι μη λειτουργικές απαιτήσεις καθορίζουν το πώς πρέπει να είναι ένα σύστημα, σε αντίθεση με τις λειτουργικές απαιτήσεις που καθορίζουν τι πρέπει να κάνει ένα σύστημα.
+	Οι μη λειτουργικές απαιτήσεις είναι οι απαιτήσεις που καθορίζουν τα κριτήρια που χρησιμοποιούνται για να κρίνουν την λειτουργία του συστήματος και κατ΄ επέκταση  αν είναι επιτυχημένο ή όχι, για αυτό και συχνά αποκαλούνται και ιδιότητες του. Επεξεργάζονται τα χαρακτηριστικά απόδοσης του, και μπορούν επίσης να περιγράψουν τις πτυχές του συστήματος που δεν σχετίζονται με την εκτέλεση του, αλλά με την εξέλιξη του στο πέρασμα του χρόνου. Οι βασικές συνήθεις κατηγορίες των μη λειτουργικών απαιτήσεων σχετίζονται με την ασφάλεια( ασφαλή πρόσβαση σε δεδομένα αλλά και σε hardware), την απόδοση ( ορίζουν χαρακτηριστικά που έχουν να κάνουν με την ταχύτητα και την ανταπόκριση του συστήματος) και την επεκτασιμότητα (σχετίζονται με το μέγεθος του συστήματος). Γενικότερα, οι μη λειτουργικές απαιτήσεις καθορίζουν το πώς πρέπει να είναι ένα σύστημα, σε αντίθεση με τις λειτουργικές απαιτήσεις που καθορίζουν τι πρέπει να κάνει ένα σύστημα. Οι λειτουργικές απαιτήσεις ανήκουν στο κομμάτι σχεδιασμού και ανάλυσης του συστήματος ενώ οι μη λειτουργικές απαιτήσεις ανήκουν στο κομμάτι της αρχιτεκτονικής του συστήματος.
 	
 	\subsection{Λειτουργίες εφαρμογής (web, mobile)}
 	\subsection{Social Networking Integration}
